# EstructuraDeDatosAvanzada

./: README.md
Grafos/Libreria/: grafos.h
Grafos/Parcial_1/: GAME_V1_old_bin  GrafosGameV1.h  GrafosGameV2.h  a.out  index.cpp  indexV1.cpp  indexV2.cpp  progra_villa_v1.txt  test  tet  tst
Grafos/Parcial_1/GAME_V1/: CMakeLists.txt  README.md
Grafos/Parcial_1/GAME_V1/data/: progra_villa_v2.txt
Grafos/Parcial_1/GAME_V1/include/: GrafosGameV2Base.h
Grafos/Parcial_1/GAME_V1/src/: main_cli.cpp  main_sfml.cpp
Grafos/Parcial_1/PROGRA_VILLA_CLI/: GrafosGameV1.h  grafos.h  index.cpp  prog_index  progra_villa_v2.txt  progra_villa_v3.txt  progra_villa_v4.txt  progra_villa_v5.txt  progra_villa_v6.txt  test
Grafos/Parcial_1/PROGRA_VILLA_UI/: GrafosGameV2.h
Grafos/Parcial_1/PROGRA_VILLA_UI/game_sfml/: CMakeLists.txt
Grafos/Parcial_1/PROGRA_VILLA_UI/game_sfml/src/: main_cli.cpp  main_sfml.cpp
Grafos/Parcial_1/data/: progra_villa_blocked.txt  progra_villa_large.txt  progra_villa_negative.txt  progra_villa_small.txt  progra_villa_v2.txt
Grafos/Parcial_1/game_sfml/: build.sh  build_and_run_sfml.sh
Grafos/Parcial_1/game_sfml/src/: main_cli.cpp  main_sfml.cpp
Grafos/Parcial_1/src/: GrafosGame.h  GrafosGameSudoV2.h  GrafosGameV2.h  indexSudoV2.cpp
Grafos/Practicas/: Mateo.txt  index.cpp  test.cpp
Grafos/Teoria/: AlgoritmoDisktra.cpp  ArchivoSave.cpp  GuardarGrafo.cpp  archivo.cpp
Tree/: BinaryTree  BinaryTree.cpp  BinaryTreeOriginal.cpp  Ejercicio2  Ejercicio2.cpp  Ejercicio3  Ejercicio3.cpp  Ejercicio4-original.cpp  Ejercicio5  Ejercicio5.cpp  explicacion_codigo.md
